[package]
name = "rsmixer"
version = "0.5.5"
license = "MIT"
homepage = "https://github.com/jantap/rsmixer"
repository = "https://github.com/jantap/rsmixer"
description = "PulseAudio volume mixer written in rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pulseaudio", "mixer", "volume", "tui", "cli"]
authors = ["Jan Wojcicki <janwojcicki45@gmail.com>"]
edition = "2018"

[features]
default = []
pa_v13 = ["libpulse-binding/pa_v13"]

[dependencies]

# logging
log = "0.4.19"
simple-logging = "2.0.2"
env_logger = "0.11.0"

# general
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
lazy_static = "1.4.0"
unicode-width = "0.1.10"
state = { version = "0.6.0", features = ["tls"] }
crossterm = { version = "0.26.1", features = ["serde", "event-stream"] }
crossbeam-channel = "0.5.0"

# error handling
thiserror = "1.0.44"

# config and cli options
serde = { version = "=1.0.214", features = ["derive"] }
toml = "0.7.6"
confy = "0.6.0"
gumdrop = "0.8.1"

# async
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.28"

# pulseaudio
libpulse-binding = { version = "2.28.1", default-features = false }
semver = "1.0.18"
itertools = "0.13.0"
async-trait = "0.1.72"
anyhow = "1.0.72"
